seeqt/QtWebEngineCore/gen_qwebenginecertificateerror.h

class QSslCertificate;
class QUrl;
class QWebEngineCertificateError;
typedef struct QSslCertificate QSslCertificate;
typedef struct QUrl QUrl;
typedef struct QWebEngineCertificateError QWebEngineCertificateError;
QWebEngineCertificateError* QWebEngineCertificateError_new(QWebEngineCertificateError* other);
void QWebEngineCertificateError_operatorAssign(QWebEngineCertificateError* self, QWebEngineCertificateError* other);
int QWebEngineCertificateError_type(const QWebEngineCertificateError* self);
QUrl* QWebEngineCertificateError_url(const QWebEngineCertificateError* self);
bool QWebEngineCertificateError_isOverridable(const QWebEngineCertificateError* self);
struct miqt_string QWebEngineCertificateError_description(const QWebEngineCertificateError* self);
void QWebEngineCertificateError_defer(QWebEngineCertificateError* self);
void QWebEngineCertificateError_rejectCertificate(QWebEngineCertificateError* self);
void QWebEngineCertificateError_acceptCertificate(QWebEngineCertificateError* self);
struct miqt_array /* of QSslCertificate* */  QWebEngineCertificateError_certificateChain(const QWebEngineCertificateError* self);
void QWebEngineCertificateError_delete(QWebEngineCertificateError* self);